--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Vansh Tyagi | Futuristic Portfolio</title>
+    <meta name="description" content="Vansh Tyagi's portfolio - MERN Stack Developer & Open Source Enthusiast" />
+    <meta name="theme-color" content="#000000" />
   </head>
   <body>
     <div id="root"></div>
