--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vansh Tyagi | Futuristic Portfolio</title>
+    <title>Vansh Tyagi Portfolio</title>
     <meta name="description" content="Vansh Tyagi's portfolio - MERN Stack Developer & Open Source Enthusiast" />
     <meta name="theme-color" content="#000000" />
   </head>
